atualizando site colocando lista

--- a/index.html
+++ b/index.html
@@ -5,18 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Título </title>
-    <link rel="stylesheet" type="text/css" href ="style.css"
+    <link rel="stylesheet" type="text/css" href ="style.css">
 </head>
 <body>
+    <div class="conteudo">
+
     <img class="capa" src="capa.jpg">
 
-    <h1> Título </h1>
+    <h1> master acessorios </h1>
 
-    <p> Descrição </p>
+    <p> aqui vendemos colares, pulseiras, aneis, entre outras joias de beleza unica</p>
 
-    <p> Missão </p>
+    <p> trazer os produtos de otima qualidade para voce, so aqui! </p>
 
-    <p> Slogan </p>
+    <p> presenteie quem voce ama com as melhores joias! </p>
+    </div>
+    <div class="beneficios">
+        <ul>
+            <li>compras com uma boa garantia </li>
+            <li>produtos com a melhor qualidade</li>
+            <li>troca rapida em caso de defeitos
+            <li>loja climatizada</li>
+        </ul>
+    </div>
+
+
+            
     
 </body>
 </html>
