--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
     <p> presenteie quem voce ama com as melhores joias! </p>
     </div>
     <div class="beneficios">
+        <h2>beneficios da loja master acessorios</h2>
         <ul>
             <li>compras com uma boa garantia </li>
             <li>produtos com a melhor qualidade</li>
             <li>troca rapida em caso de defeitos
             <li>loja climatizada</li>
         </ul>
+        <img class="foto-beneficios" src="foto-beneficios.jpg"
     </div>
-
-
-            
-    
+   
 </body>
 </html>
