--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
     <link rel="stylesheet" type="text/css" href ="style.css">
 </head>
 <body>
+    <header>
+     <nav>
+        <a href="index.html">Home</a>
+        <a href="produtos.html">produtos</a>
+        <a href="contatos.html">Contatos</a>
+     </nav>
+            
+        
+
+    </header>
+    <main>
     <div class="conteudo">
-
-    <img class="capa" src="capa.jpg">
-
-    <h1> master acessorios </h1>
-
-    <p> aqui vendemos colares, pulseiras, aneis, entre outras joias de beleza unica</p>
-
-    <p> trazer os produtos de otima qualidade para voce, so aqui! </p>
-
-    <p> presenteie quem voce ama com as melhores joias! </p>
+        <img class="capa" src="capa.jpg">
+        <h1> master acessorios </h1>
+        <p> aqui vendemos colares, pulseiras, aneis, entre outras joias de beleza unica</p>
+        <p> trazer os produtos de otima qualidade para voce, so aqui! </p>
+        <p> presenteie quem voce ama com as melhores joias! </p>
     </div>
     <div class="beneficios">
         <h2>beneficios da loja master acessorios</h2>
@@ -28,8 +34,12 @@
             <li>troca rapida em caso de defeitos
             <li>loja climatizada</li>
         </ul>
-        <img class="foto-beneficios" src="foto-beneficios.jpg"
+        <img class="foto-beneficios" src="foto-beneficios.jpg">
     </div>
+ </main>
+ <footer>
+
+ </footer>
    
 </body>
 </html>
