--- a/produtos.html
+++ b/produtos.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>produtos-master acessorios</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>isso e a pagina de produtos</h1>
+    <header>
+        <div class="caixa">
+            <h3><img class="imagem-logo" src="logo.jpg"></h3>
+            <nav class="cabecalho">
+                <a href="Index.html"> Home </a>
+                <a href="Produtos.html"> Produtos </a>
+                <a href="Contatos.html"> Contatos </a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="produtos">
+        <ul>
+            <li>pulseiras</li>
+            <li>brincos</li>
+            <li>colares</li>
+        </ul>
+        </section>
+
+    </main>
     
 </body>
 </html>
