--- a/produtos.html
+++ b/produtos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>produtos-master acessorios</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style-produtos.css">
 </head>
 <body>
     <header>
@@ -21,9 +21,17 @@
     <main>
         <section class="produtos">
         <ul>
-            <li>pulseiras</li>
-            <li>brincos</li>
-            <li>colares</li>
+            <li>
+                <h2>colares</h2>
+                <img class="produtos" src="produto01.jpg>
+                <p> compre joias da melhor qualidade </p>
+            </li>
+            <li>
+
+            </li>
+            <li>
+
+            </li>
         </ul>
         </section>
 
