--- a/produtos.html
+++ b/produtos.html
@@ -23,13 +23,21 @@
         <ul>
             <li>
                 <h2>colares</h2>
-                <img class="produtos" src="produto01.jpg>
+                <img class="produtos" src="produto01.jpg">
                 <p> compre joias da melhor qualidade </p>
             </li>
             <li>
+                <h2>brincos</h2>
+                <img class="produtos" src="produto02.jpg">
+                <p>melhores brincos da cidade</p>
+                <p></p>
 
             </li>
             <li>
+                <h2>pulseiras</h2>
+                <img class="produtos" src="produto03.jpg">
+                <p></p>
+                <p></p>
 
             </li>
         </ul>
